docs: add cache busting section to development workflow

--- a/docs/开发工作流.md
+++ b/docs/开发工作流.md
@@ -170,3 +170,48 @@ ssh -T git@github.com
 > [!TIP]
 > - 使用 SSH 443 端口可以绕过大多数网络限制
 > - 服务器 Deploy Key 只有只读权限，更安全
+
+---
+
+## 8. 静态资源缓存清理 (Cache Busting)
+
+> [!WARNING]
+> **修改 JS/CSS 文件后，必须更新版本号，否则用户浏览器会使用缓存的旧文件！**
+
+### 为什么需要？
+
+浏览器会缓存 `.js` 和 `.css` 文件以提升加载速度。当你修改了这些文件并部署后，用户的浏览器可能仍然使用旧版本，导致功能异常或样式不对。
+
+### 如何操作？
+
+1. **修改静态文件时**：同时更新 `base.html` 中对应资源的版本号参数。
+
+   ```html
+   <!-- 修改前 -->
+   <script src="/static/app.js?v=3"></script>
+   <link rel="stylesheet" href="/static/app.css?v=2">
+
+   <!-- 修改后（版本号 +1） -->
+   <script src="/static/app.js?v=4"></script>
+   <link rel="stylesheet" href="/static/app.css?v=3">
+   ```
+
+2. **涉及的文件**：
+   - `src/app/web/templates/base.html` — `app.js` 和 `app.css` 引用
+   - `src/app/web/templates/login.html` — 登录页单独的 CSS 引用（如有）
+
+3. **验证方式**：
+   - 部署后，用 `Cmd+Shift+R` (Mac) 或 `Ctrl+Shift+R` (Windows) 强制刷新
+   - 或在 URL 后加 `?v=xxx` 参数验证
+
+### 最佳实践
+
+| 场景 | 操作 |
+|-----|------|
+| 只修改 Python/HTML | 无需改版本号，HTML 已设置不缓存 |
+| 修改 `app.js` | 更新 `base.html` 中 `app.js?v=N` |
+| 修改 `app.css` 或 `pages.css` | 更新 `base.html` 中对应 CSS 的 `?v=N` |
+| 大版本发布 | 所有静态资源版本号统一递增 |
+
+> [!TIP]
+> **未来优化**：可以引入构建工具（如 Vite）自动生成文件哈希，彻底解决手动管理版本号的问题。
