refactor: 推送逻辑重构 - 分析到有机会的立即推送
- slot.py: 将推送逻辑从循环后批量推送改为循环内立即推送
- analyzer.py: 新增 push_no_opportunity_today() 函数
- 更新文档 03-功能代码映射.md

--- a/docs/使用文档/03-功能代码映射.md
+++ b/docs/使用文档/03-功能代码映射.md
@@ -193,3 +193,65 @@ base.html (基础布局)
 |------|------|
 | `app.css` | CSS 变量、登录页、基础组件 |
 | `pages.css` | 导航栏、各页面布局、表格、卡片 |
+
+---
+
+## 3.8 推送逻辑
+
+### 核心代码位置
+
+| 文件 | 函数 | 说明 |
+|------|------|------|
+| `tasks/slot.py` | `execute_slot()` | 定时/手动分析主流程 |
+| `services/analyzer.py` | `should_push_opportunity()` | 判断是否推送 |
+| `services/analyzer.py` | `push_opportunity_alert()` | 推送机会通知 |
+| `services/analyzer.py` | `push_manual_summary()` | 手动分析无机会时的汇总通知 |
+| `services/analyzer.py` | `push_no_opportunity_today()` | 最后一次定时无机会时的通知 |
+| `services/analyzer.py` | `generate_and_push_daily_report()` | 日报推送 |
+
+### 推送策略汇总
+
+| 场景 | 分析方式 | 有机会时 | 无机会时 |
+|------|----------|----------|----------|
+| **非最后一次定时** | 逐篇分析 | **立即推送** | 不发任何通知 |
+| **最后一次定时** | 逐篇分析 | **立即推送** | 发送"今日暂无机会"通知 |
+| **最后一次定时** | - | - | **必发日报**（无论有无机会） |
+| **手动分析** | 逐篇分析 | **立即推送** | 发送"没有发现机会"通知 |
+
+### 推送条件 (`should_push_opportunity`)
+
+文章必须同时满足以下条件才会触发推送：
+
+```python
+1. slot != 最后一个时间点  # 最后时间点的机会通知在分析中处理
+2. score >= threshold       # 默认阈值 60 分
+3. has_opportunity == True  # AI 判断有投资机会
+4. 当天已推送次数 < 4       # 每天最多推 4 条
+```
+
+### 流程图
+
+```
+定时/手动触发
+    ↓
+获取文章 (WeRSS)
+    ↓
+【循环】逐篇 AI 分析 (DeepSeek)
+    │
+    ├─ 有机会 且 满足推送条件？
+    │      └─ 是 → 【立即推送】机会通知
+    │
+    └─ 继续分析下一篇...
+    ↓
+分析全部完成
+    ↓
+判断场景：
+    ├─ 最后一次定时：
+    │      ├─ 无机会 → 发送"今日暂无机会"通知
+    │      └─ 必发日报
+    ├─ 手动模式：
+    │      └─ 无机会 → 发送汇总通知
+    └─ 非最后一次定时：
+           └─ 无机会 → 不发任何通知
+```
+
