feat: 分析前正文检查 - 无正文则跳过并下次重试
- analyzer.py: 新增 has_content() 和 try_refresh_content() 函数
- slot.py: 在分析循环中添加正文检查逻辑
- 无正文文章不标记已分析，下次定时任务会重新尝试
- 更新文档 03-功能代码映射.md

--- a/docs/使用文档/03-功能代码映射.md
+++ b/docs/使用文档/03-功能代码映射.md
@@ -255,3 +255,22 @@ base.html (基础布局)
            └─ 无机会 → 不发任何通知
 ```
 
+### 分析前正文检查
+
+在分析每篇文章前，会检查是否有正文内容：
+
+| 函数 | 说明 |
+|------|------|
+| `has_content(item)` | 检查文章是否有正文（raw_text > 50字符 或 raw_html > 100字符） |
+| `try_refresh_content(session, item)` | 调用 WeRSS API 重新获取正文并更新数据库 |
+
+**流程**：
+```
+检查本地正文
+    ├─ 有正文 → 正常分析
+    └─ 无正文 → 调用 WeRSS API 重新获取
+                    ├─ 获取到正文 → 更新数据库 → 分析
+                    └─ 仍无正文 → 跳过（不标记已分析，下次继续尝试）
+```
+
+**设计原因**：WeRSS 可能延迟获取正文，跳过而不标记已分析可以在后续定时任务中重试。
